Send ETA to customers

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
+PORT=3000
+
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=route_demo
-PORT=3000
+
+TWILIO_ACCOUNT_SID=ACxxxx
+TWILIO_AUTH_TOKEN=xxxx
